# acp-checkout

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: catalog.py  main.py  models.py  orders.py  payments.py  utils.py
postman_collection/: ACP-Checkout-FastAPI.postman_collection  ACP-Checkout-FastAPI.postman_collection.json
